--- a/static/css/index.css
+++ b/static/css/index.css
@@ -19,8 +19,8 @@ body {
 
 
 .teaser .hero-body {
-  padding-top: 0;
-  padding-bottom: 3rem;
+  padding-top: 1.25rem;
+  padding-bottom: 1.25rem;
 }
 
 .teaser {
